--- a/src/locales/ja.json
+++ b/src/locales/ja.json
@@ -97,7 +97,15 @@
     "processing": "処理中...",
     "cancel": "キャンセル",
     "processSuccess": "文書が正常に処理され、ダウンロードされました！",
-    "processError": "文書の処理中にエラーが発生しました。Wordファイルに複雑な書式が含まれているため、プレースホルダーの置換ができない可能性があります。より簡単な書式で文書を再作成してみてください。"
+    "processError": "文書の処理中にエラーが発生しました。Wordファイルに複雑な書式が含まれているため、プレースホルダーの置換ができない可能性があります。より簡単な書式で文書を再作成してみてください。",
+    "progress": {
+      "loading": "文書を読み込み中...",
+      "parsing": "文書を解析中...",
+      "fixing_placeholders": "プレースホルダーを準備中...",
+      "updating_fields": "文書フィールドを更新中...",
+      "rendering": "テンプレートをレンダリング中...",
+      "generating": "文書を生成中..."
+    }
   },
   "confirmDialog": {
     "confirmAction": "操作を確認",
