--- a/src/locales/pl.json
+++ b/src/locales/pl.json
@@ -98,6 +98,11 @@
     "cancel": "Anuluj",
     "processSuccess": "Dokument został pomyślnie przetworzony i pobrany!",
     "processError": "Błąd podczas przetwarzania dokumentu. Plik Word może mieć złożone formatowanie, które uniemożliwia zastąpienie zmiennych. Spróbuj odtworzyć dokument z prostszym formatowaniem.",
+    "processErrorFile": "Błąd podczas przetwarzania \"{{filename}}\"",
+    "saveAll": "Zapisz wszystko ({{count}})",
+    "multiSaveSuccess": "{{count}} szablonów zostało pomyślnie zapisanych!",
+    "saveErrorFile": "Błąd podczas zapisywania \"{{filename}}\"",
+    "noTemplatesToSave": "Brak szablonów do zapisania",
     "progress": {
       "loading": "Ładowanie dokumentu...",
       "parsing": "Analizowanie dokumentu...",
